[package]
name = "smb-derive"
version = "0.0.1"
authors = ["Tejas Mehta <tmthecoder@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.20", features = ["extra-traits", "parsing"] }
darling = "0.20.1"
quote = "1.0.32"
proc-macro2 = "1.0.66"
num_enum = "0.5.7"
