[package]
name = "smb_reader"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "spin_server_up"
edition = "2024"
path = "src/main.rs"
required-features = ["anyhow"]

[dependencies]
bincode = "1.3.3"
bitflags = { version = "2.0.2", features = ["serde"] }
der = "0.7.1"
num_enum = "0.5.7"
nom = "7"
nom-derive = "0.10.0"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
anyhow = { version = "1.0.62", optional = true }
uuid = { version = "1.1.2", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "serde"
] }
md4 = "0.10.2"
des = "0.8.1"
md-5 = "0.10.5"
hmac = "0.12.1"
digest = "0.10.6"
rc4 = "0.1.0"
sha2 = "0.10.6"
cmac = "0.7.2"
aes = "0.8.2"
aes-gcm = "0.10.3"
smb-derive = { path = "../smb-derive" }
smb-core = { path = "../smb-core" }
bytes = { version = "1.5.0" }
derive_builder = "0.12.0"
tokio = { version = "1.35.1", optional = true, features = ["net", "io-util", "rt", "rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.14", optional = true }
tokio-util = { version = "0.7.10", optional = true }
hkdf = "0.12.4"

[features]
async = ["tokio", "tokio-stream", "tokio-util"]
server = ["async"]
